Volver de mensajes personalizado

--- a/views/mensajes.html
+++ b/views/mensajes.html
@@ -32,10 +32,8 @@
     <div class="container">
         <p>{{message}}</p>
         <div class="btn-cont">
-            <a href="/" class="btn" role="button"><i class="bi bi-box-arrow-left"></i> Volver</a>
+            <a href="{{back}}" class="btn" role="button"><i class="bi bi-box-arrow-left"></i> Volver</a>
         </div>
-        <!--mensajes original tenía: "../ficha.html?id={{id}}"-->
-        <!--player edited tenía: href="../ficha?id={{id}}"-->
     </div>
 </body>
 
