--- a/views/formulario.html
+++ b/views/formulario.html
@@ -44,12 +44,12 @@
 
             <div class="form-group">
                 <label for="name">Nombre del jugador</label>
-                <input type="text" class="form-control" name="name" placeholder="Nombre y apellidos">
+                <input type="text" class="form-control" name="name" placeholder="Nombre y apellidos" required>
             </div>
 
             <div class="form-group">
                 <label for="description">Descripción</label>
-                <textarea type="text" class="form-control " name="description" placeholder="Detalles del jugador"></textarea>
+                <textarea type="text" class="form-control " name="description" placeholder="Detalles del jugador" required></textarea>
             </div>
 
             <div class="row">
@@ -65,24 +65,24 @@
                 </div>
                 <div class="form-group col-md-6 col-sm-12">
                     <label for="jersey-number">Dorsal</label>
-                    <input type="number" class="form-control" name="number" placeholder="0">
+                    <input type="number" class="form-control" name="number" placeholder="0" required min="0" max="99">
                 </div>
             </div>
 
             <div class="form-group row">
                 <div class="col-md-6 col-sm-12">
                     <label for="birthday">Fecha de nacimiento</label>
-                    <input type="date" class="form-control text-uppercase" name="birthday">
+                    <input type="date" class="form-control text-uppercase" name="birthday" required>
                 </div>
                 <div class="col-md-6 col-sm-12">
                     <label for="nationality">Nacionalidad</label>
-                    <input type="text" class="form-control" name="nationality" placeholder="Ej.: Española">
+                    <input type="text" class="form-control" name="nationality" placeholder="Ej.: Española" required>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="player-photo">Foto de perfil</label>
-                <input type="url" class="form-control" name="photo" placeholder="Add URL for player profile">
+                <input type="url" class="form-control" name="photo" placeholder="URL de la imagen" required>
             </div>
 
             <div class="form-group">
