--- a/views/formulario.html
+++ b/views/formulario.html
@@ -44,19 +44,24 @@
 
             <div class="form-group">
                 <label for="name">Nombre del jugador</label>
-                <input type="text" class="form-control" name="name" placeholder="Nombre y apellidos" required>
+                <input type="text" class="form-control" name="name" placeholder="Nombre y apellidos" value="{{player.name}}" required>
             </div>
 
             <div class="form-group">
                 <label for="description">Descripción</label>
-                <textarea type="text" class="form-control " name="description" placeholder="Detalles del jugador" required></textarea>
+                <textarea type="text" class="form-control " name="description" placeholder="Detalles del jugador" required>{{player.description}}</textarea>
             </div>
 
             <div class="row">
                 <div class="form-group col-md-6 col-sm-12">
                     <label for="position">Posición</label>
                     <select class="form-select" name="position">
+                        {{#edit}}
+                        <option value="{{player.position}}" selected hidden>{{player.position}}</option>
+                        {{/edit}}
+                        {{^edit}}
                         <option value="Banquillo" selected hidden>Banquillo</option>
+                        {{/edit}}
                         <option value="Delantero">Delantero</option>
                         <option value="Medio">Medio</option>
                         <option value="Defensa">Defensa</option>
@@ -65,30 +70,36 @@
                 </div>
                 <div class="form-group col-md-6 col-sm-12">
                     <label for="jersey-number">Dorsal</label>
-                    <input type="number" class="form-control" name="number" placeholder="0" required min="0" max="99">
+                    <input type="number" class="form-control" name="number" placeholder="0" value="{{player.number}}" required min="0" max="99">
                 </div>
             </div>
 
             <div class="form-group row">
                 <div class="col-md-6 col-sm-12">
                     <label for="birthday">Fecha de nacimiento</label>
-                    <input type="date" class="form-control text-uppercase" name="birthday" required>
+                    <input type="date" class="form-control text-uppercase" name="birthday" value="{{player.birth}}" required>
                 </div>
                 <div class="col-md-6 col-sm-12">
                     <label for="nationality">Nacionalidad</label>
-                    <input type="text" class="form-control" name="nationality" placeholder="Ej.: Española" required>
+                    <input type="text" class="form-control" name="nationality" placeholder="Ej.: Española" value="{{player.nationality}}" required>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="player-photo">Foto de perfil</label>
-                <input type="url" class="form-control" name="photo" placeholder="URL de la imagen" required>
+                <input type="url" class="form-control" name="photo" placeholder="URL de la imagen" value="{{player.photo}}" required>
             </div>
 
             <div class="form-group">
                 <label for="price">Valor de mercado</label>
+                {{#edit}}
+                <input type="range" class="form-range" name="price" value="{{player.marketValue}}" min="0" max="100000000" step="10000" oninput="this.nextElementSibling.value = this.value">
+                <output for="price" id="outrange">{{player.marketValue}}</output>€
+                {{/edit}}
+                {{^edit}}
                 <input type="range" class="form-range" name="price" value="0" min="0" max="100000000" step="10000" oninput="this.nextElementSibling.value = this.value">
                 <output for="price" id="outrange">0</output>€
+                {{/edit}}
             </div>
 
             <div class="btn-cont">
