Errores en la edición de fichas solucionados
Algunos atributos de los jugadores por defecto no estaban en el formato adecuado. Las imágenes por ejemplo, aunque no sean URLs válidas (y así seguirán siendo, eso no lo pienso tocar), ha habido que añadirles el resto de la ruta ya que los htmls tenían que tener el src "limpio" para que la URL se guardara correctamente.
También me fije en que aunque cambiara el dorsal y la imagen en el formulario, no se veía reflejado en la ficha. Esto es porque cambié los name de los input, me acorde de cambiarlos en el Player de crear, pero no en el de editar. Y como no había editado hasta ahora, pues no me había pispado.

--- a/views/plantilla.html
+++ b/views/plantilla.html
@@ -35,7 +35,7 @@
         <div class="players">
             {{#players}}
             <a href="ficha?id={{id}}">
-                <img src="imagenes/players/{{photo}}" alt="{{name}}">
+                <img src="{{photo}}" alt="{{name}}">
                 <p>{{name}}</p>
             </a>
             {{/players}}
