--- a/views/ficha.html
+++ b/views/ficha.html
@@ -35,7 +35,7 @@
 
             <div class="row">
                 <div class="col-md-4">
-                    <img id="player-photo" src="imagenes/players/{{player.photo}}" alt="{{player.name}}">
+                    <img id="player-photo" src="{{player.photo}}" alt="{{player.name}}">
                 </div>
                 <div class="col-md-8">
                     <p><strong>Posición:</strong> {{player.position}}</p>
@@ -69,7 +69,7 @@
                     {{#subelems}}
                     <tr>
                         <td>
-                            <img src="imagenes/teams/{{emblem}}" alt="{{club}}" class="tbl_img">
+                            <img src="{{emblem}}" alt="{{club}}" class="tbl_img">
                         </td>
                         <td>{{club}}</td>
                         <td>{{stage.start}}-{{stage.end}}</td>
