Información por pantalla de ficha mejorada

--- a/views/ficha.html
+++ b/views/ficha.html
@@ -40,9 +40,9 @@
                 <div class="col-md-8">
                     <p><strong>Posición:</strong> {{player.position}}</p>
                     <p><strong>Dorsal:</strong> {{player.number}}</p>
-                    <p><strong>Fecha de nacimiento:</strong> {{player.birth}}</p>
+                    <p><strong>Fecha de nacimiento:</strong> {{date}}</p>
                     <p><strong>Nacionalidad:</strong> {{player.nationality}}</p>
-                    <p><strong>Valor de mercado:</strong> {{player.marketValue}}</p>
+                    <p><strong>Valor de mercado:</strong> {{value}}</p>
                     <p><strong>Descripción:</strong> {{player.description}}</p>
                 </div>
             </div>
