--- a/views/plantilla.html
+++ b/views/plantilla.html
@@ -11,15 +11,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css?family=Vina+Sans|Kanit" rel="stylesheet" type="text/css">
 
-    <link type="text/css" rel="stylesheet" href="base.css" />
-    <link type="text/css" rel="stylesheet" href="plantilla.css" />
+    <link type="text/css" rel="stylesheet" href="/base.css" />
+    <link type="text/css" rel="stylesheet" href="/plantilla.css" />
 </head>
 
 <body>
     <header>
         <div>
             <a href="/">
-                <img id="header-img" src="imagenes/Escudo.jpeg" alt="Escudo del Triplano FC">
+                <img id="header-img" src="/imagenes/Escudo.jpeg" alt="Escudo del Triplano FC">
             </a>
         </div>
         <div>
