--- a/views/ficha.html
+++ b/views/ficha.html
@@ -48,8 +48,8 @@
             </div>
 
             <div class="btn-cont">
-                <a href="/editar?id={{player.id}}" class="btn" role="button"><i class="bi bi-pencil"></i> Editar</a>
-                <a href="/borrar?id={{player.id}}" class="btn" role="button"><i class="bi bi-trash"></i> Eliminar</a>
+                <a href="/ficha/editar?id={{player.id}}" class="btn" role="button"><i class="bi bi-pencil"></i> Editar</a>
+                <a href="/ficha/borrar?id={{player.id}}" class="btn" role="button"><i class="bi bi-trash"></i> Eliminar</a>
                 <a href="/" class="btn" role="button"><i class="bi bi-box-arrow-left"></i> Volver</a>
             </div>
         </div>
@@ -81,7 +81,7 @@
                 </tbody>
             </table>
 
-            <form role="form" action="subelementoCreado" method="post">
+            <form role="form" action="/ficha/agregar" method="post">
                 <div class="form-group">
                     <label for="emblem">Escudo</label>
                     <input type="url" class="form-control" name="emblem" placeholder="URL de la imagen" required>
