--- a/views/plantilla.html
+++ b/views/plantilla.html
@@ -34,7 +34,7 @@
 
         <div class="players">
             {{#players}}
-            <a href="ficha?id={{id}}">
+            <a href="/ficha?id={{id}}">
                 <img src="{{photo}}" alt="{{name}}">
                 <p>{{name}}</p>
             </a>
@@ -45,7 +45,7 @@
         </div>
 
         <div class="btn-cont">
-            <a href="formulario" class="btn" role="btn"><i class="bi bi-person-fill-add"></i> Inscribir nuevo jugador</a>
+            <a href="/formulario" class="btn" role="btn"><i class="bi bi-person-fill-add"></i> Inscribir nuevo jugador</a>
         </div>
     </section>
 
