--- a/views/mensajes.html
+++ b/views/mensajes.html
@@ -19,7 +19,7 @@
     <header>
         <div>
             <a href="/">
-                <img id="header-img" src="/imagenes/Escudo.jpeg" alt="Escudo del Triplano FC">
+                <img id="header-img" src="/images/Escudo.jpeg" alt="Escudo del Triplano FC">
             </a>
         </div>
         <div>
