Uso de {{player}}
El profe me recomendo prescindir de edit ya que con player podía hacer lo mismo.
Sin embargo, con el caso ben, he visto que está bien abstraer, una cosa es incorporar los datos de un jugador al formulario y otra es editar a uno

--- a/views/formulario.html
+++ b/views/formulario.html
@@ -55,12 +55,12 @@
                 <div class="form-group col-md-6 col-sm-12">
                     <label for="position">Posición</label>
                     <select class="form-select" name="position">
-                        {{#edit}}
+                        {{#player}}
                         <option value="{{player.position}}" selected hidden>{{player.position}}</option>
-                        {{/edit}}
-                        {{^edit}}
+                        {{/player}}
+                        {{^player}}
                         <option value="Banquillo" selected hidden>Banquillo</option>
-                        {{/edit}}
+                        {{/player}}
                         <option value="Delantero">Delantero</option>
                         <option value="Medio">Medio</option>
                         <option value="Defensa">Defensa</option>
@@ -91,14 +91,14 @@
 
             <div class="form-group">
                 <label for="price">Valor de mercado</label>
-                {{#edit}}
+                {{#player}}
                 <input type="range" class="form-range" name="price" value="{{player.marketValue}}" min="0" max="100000000" step="10000" oninput="this.nextElementSibling.value = this.value">
                 <output for="price" id="outrange">{{player.marketValue}}</output>€
-                {{/edit}}
-                {{^edit}}
+                {{/player}}
+                {{^player}}
                 <input type="range" class="form-range" name="price" value="0" min="0" max="100000000" step="10000" oninput="this.nextElementSibling.value = this.value">
                 <output for="price" id="outrange">0</output>€
-                {{/edit}}
+                {{/player}}
             </div>
 
             <div class="btn-cont">
