Se muestran 5 jugadores, y creado boton cargar más (arreglar funcionalidad)

--- a/views/plantilla.html
+++ b/views/plantilla.html
@@ -44,6 +44,8 @@
             {{/players}}
         </div>
 
+        <button onclick="loadMorePlayers()">Cargar más jugadores</button>
+
         <div class="btn-cont">
             <a href="/formulario" class="btn" role="btn"><i class="bi bi-person-fill-add"></i> Inscribir nuevo jugador</a>
         </div>
