--- a/views/plantilla.html
+++ b/views/plantilla.html
@@ -46,14 +46,16 @@
             {{/players}}
         </div>
 
-
         <div class="btn-cont">
             <button class="btn" onclick='loadPlayers()'>
                 <i class="bi bi-chevron-double-down"></i> Cargar más
             </button>
-            <a href="/formulario" class="btn" role="btn"><i class="bi bi-person-fill-add"></i> Inscribir nuevo jugador</a>
         </div>
     </section>
+
+    <div class="btn-cont bottom-right-button">
+        <a href="/formulario" class="btn" role="btn"><i class="bi bi-person-fill-add"></i></a>
+    </div>
 
 </body>
 
