--- a/public/base.css
+++ b/public/base.css
@@ -20,7 +20,7 @@ body {
 }
 
 p {
-        text-align: justify;
+        text-align: left;
         margin-right: 20px;
         margin-left: 20px;
 }
@@ -56,6 +56,12 @@ header {
         border: 1px solid #ccc;
         border-radius: 25px;
         text-align: center;
+}
+
+@media (max-width: 415px) {  /*(250 + 2*20 + 2*20 + 2*1)/80 = max-width/100 */
+        .container {
+                min-width: fit-content;
+        }
 }
 
 form {
@@ -113,4 +119,22 @@ form {
 
 .bi-person-fill-add {
         font-size: 1.1em;
+}
+
+
+@media (max-width: 600px) {
+        h1 {
+                font-size: 40px;
+        }
+        #header-img {
+                height: 70px;
+        }
+}
+@media (max-width: 580px) {
+        h1 {
+                font-size: 35px;
+        }
+        #header-img {
+                height: 65px;
+        }
 }
