--- a/views/plantilla.html
+++ b/views/plantilla.html
@@ -14,7 +14,7 @@
     <link type="text/css" rel="stylesheet" href="/base.css" />
     <link type="text/css" rel="stylesheet" href="/plantilla.css" />
 
-    <script src="app.js"></script> 
+    <script src="app.js"></script>
 </head>
 
 <body>
@@ -31,32 +31,22 @@
         </div>
     </header>
 
-    <section class="container">
+    <main class="container">
         <h2>Plantilla temporada 23/24</h2>
 
-        <div class="players" id="players">
-            {{#players}}
-            <a href="/ficha?id={{id}}">
-                <img src="{{photo}}" alt="{{name}}">
-                <p>{{name}}</p>
-            </a>
-            {{/players}}
-            {{^players}}
-            <p>No hay jugadores fichados aún</p>
-            {{/players}}
-        </div>
+        <section class="players" id="players">
+        </section>
 
-        <div class="btn-cont">
+        <div class="btn-cont" id="loadPlayers">
             <button class="btn" onclick='loadPlayers()'>
                 <i class="bi bi-chevron-double-down"></i> Cargar más
             </button>
         </div>
-    </section>
+    </main>
 
     <div class="btn-cont bottom-right-button">
         <a href="/formulario" class="btn" role="btn"><i class="bi bi-person-fill-add"></i></a>
     </div>
-
 </body>
 
 </html>
