--- a/public/plantilla.css
+++ b/public/plantilla.css
@@ -1,3 +1,38 @@
+.search {
+    margin-left: auto;
+}
+
+.search form {
+    display: flex;
+    margin: 0;
+}
+
+.search form .btn {
+    width: fit-content;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-color: transparent;
+    margin-left: 1px;
+}
+
+.form-control {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.form-control:focus {
+    box-shadow: 0 0 0 0;
+    border-color: rgba(214, 12, 12, .95);
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background: url(https://pro.fontawesome.com/releases/v5.10.0/svgs/solid/times-circle.svg) no-repeat 50% 50%;
+}
+
 .players{
     display: grid;
     padding: 20px;
