--- a/views/plantilla.html
+++ b/views/plantilla.html
@@ -9,6 +9,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Vina+Sans|Kanit" rel="stylesheet" type="text/css">
 
     <link type="text/css" rel="stylesheet" href="/base.css" />
@@ -29,10 +30,16 @@
                 <h1>Triplano FC</h1>
             </a>
         </div>
+        <div class="search">
+            <form>
+                <input class="form-control" type="search" id="searchPlayer" placeholder="Search...">
+                <button type="submit" onclick='search(event)' class="btn bg-light"><i class="fas fa-search"></i></button>
+            </form>
+        </div>
     </header>
 
     <main class="container">
-        <h2>Plantilla temporada 23/24</h2>
+        <h2 id="title">Plantilla temporada 23/24</h2>
 
         <section class="players" id="players">
         </section>
