--- a/views/plantilla.html
+++ b/views/plantilla.html
@@ -33,7 +33,13 @@
     </header>
 
     <main class="container">
-        <h2 id="title">Plantilla temporada 23/24</h2>
+        <div class="top-container">
+            <h2 id="title">Plantilla temporada 23/24</h2>
+
+            <button class="btn btn-change-grid" onclick='changeGrid()'>
+                <i class="bi bi-grid-1x2-fill"></i>
+            </button>
+        </div>
 
         <section class="players" id="players">
         </section>
