--- a/public/plantilla.css
+++ b/public/plantilla.css
@@ -70,6 +70,22 @@ input[type="search"]::-webkit-search-cancel-button {
     box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.5);
 }
 
+.top-container {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.bi-grid-1x2-fill {
+    font-size: 1.25em;  /* width = 46px */
+}
+
+.top-container h2 {
+    text-align: center;
+    flex-grow: 1;
+    margin: 0 10px;
+    margin-left: 56px;
+}
+
 .bottom-right-button {
     position: fixed;
     bottom: 1%;
