--- a/views/ficha.html
+++ b/views/ficha.html
@@ -44,7 +44,7 @@
             <div class="btn-cont">
                 <a href="/ficha/formulario?id={{player.id}}" class="btn" role="button"><i class="bi bi-pencil"></i> Editar</a>
                 <a href="/ficha/borrar?id={{player.id}}" class="btn" role="button"><i class="bi bi-trash"></i> Eliminar</a>
-                <a href="/" class="btn" role="button"><i class="bi bi-box-arrow-left"></i> Volver</a>
+                <a href="javascript:history.back()" class="btn" role="button"><i class="bi bi-box-arrow-left"></i> Volver</a>
             </div>
         </div>
 
