--- a/views/formulario.html
+++ b/views/formulario.html
@@ -120,7 +120,7 @@
 
             <div class="btn-cont">
                 <button type="submit" onclick="submitFormulario(event)" class="btn"><i class="bi bi-download"></i> Guardar</button>
-                <a href="{{cancel}}" class="btn" role="button"><i class="bi bi-x-lg"></i> Cancelar</a>
+                <a href="javascript:history.back()" class="btn" role="button"><i class="bi bi-x-lg"></i> Cancelar</a>
             </div>
         </form>
     </div>
