--- a/views/players.html
+++ b/views/players.html
@@ -1,5 +1,5 @@
 {{#players}}
-<a href="/ficha?id={{id}}">
+<a href="/ficha?id={{id}}" data-position="{{position}}">
     <img src="{{photo}}" alt="{{name}}">
     <p>{{name}}</p>
 </a>
