--- a/views/plantilla.html
+++ b/views/plantilla.html
@@ -12,6 +12,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Vina+Sans|Kanit" rel="stylesheet" type="text/css">
 
+    <!-- dropdown -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
     <link type="text/css" rel="stylesheet" href="/base.css" />
     <link type="text/css" rel="stylesheet" href="/plantilla.css" />
 
@@ -34,6 +42,19 @@
 
     <main class="container">
         <div class="top-container">
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownButton" data-toggle="dropdown">
+                    <i class="bi bi-funnel-fill"></i>
+                </button>
+                <div class="dropdown-menu" id="positionFilter">
+                    <a class="dropdown-item" data-value="Banquillo">Banquillo</a>
+                    <a class="dropdown-item" data-value="Delantero">Delantero</a>
+                    <a class="dropdown-item" data-value="Centrocampista">Centrocampista</a>
+                    <a class="dropdown-item" data-value="Defensa">Defensa</a>
+                    <a class="dropdown-item" data-value="Portero">Portero</a>
+                </div>
+            </div>
+
             <h2 id="title">Plantilla temporada 23/24</h2>
 
             <button class="btn btn-change-grid" onclick='changeGrid()'>
